# crewAI

./: README.md
primecrew/: README.md  pyproject.toml  report.md
primecrew/src/primecrew/: crew.py  main.py
primecrew/src/primecrew/config/: agents.yaml
