[project]
name = "primecrew"
version = "0.1.0"
description = "PrimeCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0",
    "fastapi>=0.124.2",
    "litellm>=1.75.3",
]

[project.scripts]
primecrew = "primecrew.main:run"
run_crew = "primecrew.main:run"
train = "primecrew.main:train"
replay = "primecrew.main:replay"
test = "primecrew.main:test"
run_with_trigger = "primecrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
